--- a/Bemutatkozás.html
+++ b/Bemutatkozás.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html charset="utf-8">
-<body>
+<head>
 <title>Magamról</title>
+</head>
+<body>
 <h1>Nagy Donát László</h1>
 <p>Születési dátum:2001.11.30</p>
 <p>Életkor:18</p>
 <p>Testvérek:1</p>
-<p>Hobbi:Gépezés,Barátokkal szórakozás</p>
+<p>Hobbi:Gépezés,Barátokkal szórakozás<a href="file:///C:/Users/Donát/Desktop/MECHWARTINFO/bemutatkozas/change2.html">Kedvenc labdajátékom</a></p>
 <p>Kedvenc szín:Kék</p>
 <p>Így nézek ki:</p>
 <img src="alonso.jpg" alt="Nagy Donát László" style="width:400px;height;500px;">
